Added logging to RadarFileService, simple refactoring for many classes (comments, unused imports, formatting, extracting methods)